--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE.html>
+<html>
+   <head>
+      <title>MY Personal Profi</title>
+      <meta charset= "utf-8">
+      <style>
+      <h1>{colour:green;
+          }
+      <link rel="stylesheet" type="text"/css"href=css/style.css.">
+   </head>
+   <body>
+       <div id=" divmaincontainer">
+    <header id="siteheader">
+        <h1 id="sitetitle">My Personal Website</h1>
+        <span id="sitemotto"> Inspired To make the world better for all </span>
+    </header>
+        <nav id="sitenav">
+        <ul id="ulnav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">eduaction</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Project</a></li>
+        <li><a href="#">Hobbies</a></li>
+        <li><a href="#">Research</a></li>
+        </nav>
+        <main id="main content">
+        <section>
+           <h1> personal Details>/h1>
+            <p>My name is Kevin Motlhanka</p>
+        </section>
+        <article>
+         <p></P>
+        </article>
+        <main>
+        <footer>
+        <p> copyright@2026-Kevin Motlhanka</p>
+        <hr>
+        <section id=" socialmedia">
+         <a href="facebook.com"><img src="FB.jpg"></a>
+         <a href="web.whatspp.com"><imgsrc="WP.jpg"></a>
+         <a href="instagram.com"><imgsrc="IG.jpg></a>
+        
+        </section
+        
+       </div>
+   </body>
 
+</html>
