--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <style>
       <h1>{colour:green;
           }
+      </style>
       <link rel="stylesheet" type="text"/css"href=css/style.css.">
    </head>
    <body>
