--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <main id="main content">
         <section>
-           <h1> personal Details>/h1>
+           <h1> personal Details></h1>
             <p>My name is Kevin Motlhanka</p>
         </section>
         <article>
