--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#">eduaction</a></li>
         <li><a href="#">Experience</a></li>
         <li><a href="#">Project</a></li>
-        <li><a href="#">Hobbies</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="#">Research</a></li>
         </nav>
         <main id="main content">
